--- a/stashboard/templates/base.html
+++ b/stashboard/templates/base.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="/css/gh-buttons.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="/css/font-awesome.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/gh-buttons.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.css" type="text/css" media="screen" />
     {% block js %}
     {% endblock %}
   </head>
@@ -17,14 +17,14 @@
           <a href="/rss" class="button pill big" title="Subscribe to the RSS feed">
             <i class="icon-rss"></i> Feeds
           </a>
-          {% if admin %}
-          <a class="button pill big" href="/admin">Admin</a>
+          {% if user.is_staff %}
+          <a class="button pill big" href="{% url 'admin:index' %}">Admin</a>
           {% endif %}
           <a href="{{ report_url }}" class="button pill big">
             <i class="icon-exclamation-sign"></i> Report an Issue</a>
         </div>
-        <img id="logo" src="/images/logo.png" alt="Logo"/>
-        <a href="/"><h1 id="title">{{ title }}</h1></a>
+        <img id="logo" src="{{ STATIC_URL }}images/logo.png" alt="Logo"/>
+        <a href="/"><h1 id="title">{{ title|default:"Stashboard" }}</h1></a>
       </div>
       <div id="content">
         {% block content %}
@@ -38,7 +38,7 @@
           {% if user %}
           <a href="{{ logout_url }}">Logout</a>
           {% else %}
-          <a href="/admin">Admin</a>
+          <a href="{% url 'admin:index' %}">Admin</a>
         </li>
         {% endif %}
         <li>
@@ -47,7 +47,7 @@
         <li>&copy; 2010-{% now "Y" %} <a href="http://www.twilio.com">Twilio Inc.</a></li>
       </ul>
       <ul class="right">
-        <li id="powered"><a href="http://www.stashboard.org">POWERED BY <img src="/images/poweredbystash.png" alt="stash!" /> STASHBOARD</a></li>
+        <li id="powered"><a href="http://www.stashboard.org">POWERED BY <img src="{{ STATIC_URL }}images/poweredbystash.png" alt="stash!" /> STASHBOARD</a></li>
       </ul>
     </div>
     {% block js_end %}
