--- a/stashboard/templates/base.html
+++ b/stashboard/templates/base.html
@@ -24,7 +24,7 @@
             <i class="icon-exclamation-sign"></i> Report an Issue</a>
         </div>
         <img id="logo" src="{{ STATIC_URL }}images/logo.png" alt="Logo"/>
-        <a href="/"><h1 id="title">{{ title|default:"Stashboard" }}</h1></a>
+        <a href="/"><h1 id="title">{% block title %}{{ title|default:"Stashboard" }}{% endblock %}</h1></a>
       </div>
       <div id="content">
         {% block content %}
