--- a/stashboard/templates/service.html
+++ b/stashboard/templates/service.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2>{{ service.name }} <a class="button pill service-rss" href="/rss?services={{ service.slug }}"><img src="/images/feed-icon-14x14.png"/></a></h2>
+<h2>{{ service.name }} <a class="button pill service-rss" href="/rss?services={{ service.slug }}"><img src="{{ STATIC_URL }}images/feed-icon-14x14.png"/></a></h2>
 <p id="serviceDescription"> {{ service.description }}</p>
 
 {% if start_date %}
@@ -25,10 +25,10 @@
     <tr>
       <td class="time">{{ e.start|timesince }} ago</td>
       {% if e.informational %}
-      <td class="status highlight"><img src="/images/icons/fugue/information.png" alt="Information" /></td>
+      <td class="status highlight"><img src="{{ STATIC_URL }}images/icons/fugue/information.png" alt="Information" /></td>
       <td>{{ e.message }}</td>
       {% else %}
-      <td class="status highlight"><img src="/images/{{ e.status.image }}" alt="{{ e.status.name }}" /></td>
+      <td class="status highlight"><img src="{{ STATIC_URL }}images/{{ e.status.image }}" alt="{{ e.status.name }}" /></td>
       <td>{{ e.message }}</td>
       {% endif %}
     </tr>
@@ -39,7 +39,7 @@
 <section id="noevents">
 </section>
 <section id="allgood">
-  <img src="/images/icons/iconic/check_alt.png" alt="Up"/>
+  <img src="{{ STATIC_URL }}images/icons/iconic/check_alt.png" alt="Up"/>
   {% if start_date %}
   <p>No events here! The service was up and running for this time range.</p>
   {% else %}
