--- a/stashboard/templates/base.html
+++ b/stashboard/templates/base.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
       <div id="header">
         <div class="actions button-container">
-          <a href="/rss" class="button pill big" title="Subscribe to the RSS feed">
+          <a href="{% url 'rss' %}" class="button pill big" title="Subscribe to the RSS feed">
             <i class="icon-rss"></i> Feeds
           </a>
           {% if user.is_staff %}
@@ -35,8 +35,8 @@
     <div id="footer">
       <ul class="left">
         <li>
-          {% if user %}
-          <a href="{{ logout_url }}">Logout</a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}">Logout</a>
           {% else %}
           <a href="{% url 'admin:index' %}">Admin</a>
         </li>
