Remove everything that is unused.

--- a/stashboard/templates/base.html
+++ b/stashboard/templates/base.html
@@ -42,7 +42,7 @@
         </li>
         {% endif %}
         <li>
-          <a href="/documentation">API</a>
+          <a href="{% url 'api-root' %}">API</a>
         </li>
         <li>&copy; 2010-{% now "Y" %} <a href="http://www.twilio.com">Twilio Inc.</a></li>
       </ul>
